@@ -41,9 +41,9 @@ begin_import
 import|import
 name|java
 operator|.
-name|net
+name|util
 operator|.
-name|URI
+name|ArrayList
 import|;
 end_import
 
@@ -86,6 +86,30 @@ operator|.
 name|Map
 operator|.
 name|Entry
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Matcher
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|regex
+operator|.
+name|Pattern
 import|;
 end_import
 
@@ -250,22 +274,6 @@ operator|.
 name|api
 operator|.
 name|MetaException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|common
-operator|.
-name|FileUtils
 import|;
 end_import
 
@@ -896,6 +904,288 @@ name|suffixBuf
 operator|.
 name|toString
 argument_list|()
+return|;
+block|}
+specifier|static
+specifier|final
+name|Pattern
+name|pat
+init|=
+name|Pattern
+operator|.
+name|compile
+argument_list|(
+literal|"([^/]+)=([^/]+)"
+argument_list|)
+decl_stmt|;
+specifier|public
+specifier|static
+name|LinkedHashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|makeSpecFromName
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+throws|throws
+name|MetaException
+block|{
+name|LinkedHashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|partSpec
+init|=
+operator|new
+name|LinkedHashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|name
+operator|==
+literal|null
+operator|||
+name|name
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|MetaException
+argument_list|(
+literal|"Partition name is invalid. "
+operator|+
+name|name
+argument_list|)
+throw|;
+block|}
+name|List
+argument_list|<
+name|String
+index|[]
+argument_list|>
+name|kvs
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+index|[]
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|Path
+name|currPath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|name
+argument_list|)
+decl_stmt|;
+do|do
+block|{
+name|String
+name|component
+init|=
+name|currPath
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+name|Matcher
+name|m
+init|=
+name|pat
+operator|.
+name|matcher
+argument_list|(
+name|component
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|m
+operator|.
+name|matches
+argument_list|()
+condition|)
+block|{
+name|String
+name|k
+init|=
+name|m
+operator|.
+name|group
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|String
+name|v
+init|=
+name|m
+operator|.
+name|group
+argument_list|(
+literal|2
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|partSpec
+operator|.
+name|containsKey
+argument_list|(
+name|k
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|MetaException
+argument_list|(
+literal|"Partition name is invalid. Key "
+operator|+
+name|k
+operator|+
+literal|" defined at two levels"
+argument_list|)
+throw|;
+block|}
+name|String
+index|[]
+name|kv
+init|=
+operator|new
+name|String
+index|[
+literal|2
+index|]
+decl_stmt|;
+name|kv
+index|[
+literal|0
+index|]
+operator|=
+name|k
+expr_stmt|;
+name|kv
+index|[
+literal|1
+index|]
+operator|=
+name|v
+expr_stmt|;
+name|kvs
+operator|.
+name|add
+argument_list|(
+name|kv
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|MetaException
+argument_list|(
+literal|"Partition name is invalid. "
+operator|+
+name|name
+argument_list|)
+throw|;
+block|}
+name|currPath
+operator|=
+name|currPath
+operator|.
+name|getParent
+argument_list|()
+expr_stmt|;
+block|}
+do|while
+condition|(
+name|currPath
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|currPath
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+do|;
+comment|// reverse the list since we checked the part from leaf dir to table's base dir
+for|for
+control|(
+name|int
+name|i
+init|=
+name|kvs
+operator|.
+name|size
+argument_list|()
+init|;
+name|i
+operator|>
+literal|0
+condition|;
+name|i
+operator|--
+control|)
+block|{
+name|partSpec
+operator|.
+name|put
+argument_list|(
+name|kvs
+operator|.
+name|get
+argument_list|(
+name|i
+operator|-
+literal|1
+argument_list|)
+index|[
+literal|0
+index|]
+argument_list|,
+name|kvs
+operator|.
+name|get
+argument_list|(
+name|i
+operator|-
+literal|1
+argument_list|)
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|partSpec
 return|;
 block|}
 specifier|public
