@@ -39,6 +39,38 @@ name|hadoop
 operator|.
 name|hive
 operator|.
+name|metastore
+operator|.
+name|MetaStoreUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|metastore
+operator|.
+name|Warehouse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
 name|ql
 operator|.
 name|exec
@@ -97,7 +129,61 @@ name|ql
 operator|.
 name|metadata
 operator|.
-name|*
+name|Hive
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|metadata
+operator|.
+name|HiveException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|metadata
+operator|.
+name|Partition
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|metadata
+operator|.
+name|Table
 import|;
 end_import
 
@@ -2627,21 +2713,40 @@ index|[
 literal|2
 index|]
 decl_stmt|;
+if|if
+condition|(
+name|tab
+operator|.
+name|isPartitioned
+argument_list|()
+condition|)
+block|{
 for|for
 control|(
-name|Partition
-name|part
+name|String
+name|partName
 range|:
 name|Hive
 operator|.
 name|get
 argument_list|()
 operator|.
-name|getPartitions
+name|getPartitionNames
 argument_list|(
-name|this
+name|MetaStoreUtils
 operator|.
+name|DEFAULT_DATABASE_NAME
+argument_list|,
 name|tab
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+operator|(
+name|short
+operator|)
+operator|-
+literal|1
 argument_list|)
 control|)
 block|{
@@ -2654,11 +2759,22 @@ name|String
 argument_list|>
 name|partSpec
 init|=
-name|part
+name|Warehouse
 operator|.
-name|getSpec
-argument_list|()
+name|makeSpecFromName
+argument_list|(
+name|partName
+argument_list|)
 decl_stmt|;
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"part name: "
+operator|+
+name|partName
+argument_list|)
+expr_stmt|;
 comment|// Create the row object
 name|ArrayList
 argument_list|<
@@ -2882,6 +2998,49 @@ if|if
 condition|(
 name|Boolean
 operator|.
+name|FALSE
+operator|.
+name|equals
+argument_list|(
+name|r
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|trace
+argument_list|(
+literal|"pruned partition: "
+operator|+
+name|partSpec
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|Partition
+name|part
+init|=
+name|Hive
+operator|.
+name|get
+argument_list|()
+operator|.
+name|getPartition
+argument_list|(
+name|tab
+argument_list|,
+name|partSpec
+argument_list|,
+name|Boolean
+operator|.
+name|FALSE
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|Boolean
+operator|.
 name|TRUE
 operator|.
 name|equals
@@ -2907,29 +3066,6 @@ name|part
 argument_list|)
 expr_stmt|;
 block|}
-elseif|else
-if|if
-condition|(
-name|Boolean
-operator|.
-name|FALSE
-operator|.
-name|equals
-argument_list|(
-name|r
-argument_list|)
-condition|)
-block|{
-name|LOG
-operator|.
-name|trace
-argument_list|(
-literal|"pruned partition: "
-operator|+
-name|partSpec
-argument_list|)
-expr_stmt|;
-block|}
 else|else
 block|{
 name|LOG
@@ -2950,6 +3086,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
 else|else
 block|{
 comment|// is there is no parition pruning, all of them are needed
@@ -2957,10 +3094,43 @@ name|true_parts
 operator|.
 name|add
 argument_list|(
-name|part
+name|Hive
+operator|.
+name|get
+argument_list|()
+operator|.
+name|getPartition
+argument_list|(
+name|tab
+argument_list|,
+name|partSpec
+argument_list|,
+name|Boolean
+operator|.
+name|FALSE
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+block|}
+else|else
+block|{
+name|true_parts
+operator|.
+name|addAll
+argument_list|(
+name|Hive
+operator|.
+name|get
+argument_list|()
+operator|.
+name|getPartitions
+argument_list|(
+name|tab
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 catch|catch
