@@ -183,6 +183,9 @@ Trunk - Unreleased
     HIVE-514. Partition key names should be case insensitive in alter table add
     partition statement. (Prasad Chakka via zshao)
 
+    HIVE-523. FIx PartitionPruner not to fetch all partitions at once.
+    (Prasad Chakka via zshao)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
